--- a/index.html
+++ b/index.html
@@ -40,12 +40,31 @@
 			</div>
 		</div>
 		
-		<div class="home-screenshots">
-			<img class="home-screenshots__promo" src="img/promo.jpg" alt="Yui screenshots"/>
-		</div>
-	
+
+			<div class="home__post">
+				<article class="home__article">
+					<h2 class="home__article-title"><span class="home__article-title-main">Yui-cli 1.0.2 released<span class="home__article-date-position"><span class="home__article-date">2023-02-21 12:24</span></span></span></h2>
+					<div class="home__article-content"><pre><code>pip install yui --upgrade
+</code></pre><h1 id="changelog">CHANGELOG</h1>
+<h2 id="2023-02-20">[2023-02-20]</h2>
+<h3 id="added">Added</h3>
+<ul>
+<li>MacOS and Windows changes for yui open</li>
+<li>error handling for random string instead of taskId</li>
+</ul>
+<div>
+				</article>
+				<article class="home__article">
+					<h2 class="home__article-title"><span class="home__article-title-main">Yui&#39;s GUI client 1.0.0-alpha released, dark theme support added<span class="home__article-date-position"><span class="home__article-date">2023-02-20 01:44</span></span></span></h2>
+					<div class="home__article-content"><p>Light/Dark color scheme detected automatically.
+Actual look will depend on your system settings.<br>
+Screenshot was made on KDE with Breeze Dark theme.</p>
+<p><img src="/img/2023-02/1.0.0-alpha.png" alt="Yui&rsquo;s GUI dark theme, 1.0.0"></p>
+<div>
+				</article>
+			</div>
 		
-		
+
 	</main>
 
 
