--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 			<div class="home__post">
 				<article class="home__article">
-					<h2 class="home__article-title"><span class="home__article-title-main">Yui-cli 1.0.2 released<span class="home__article-date-position"><span class="home__article-date">2023-02-21 12:24</span></span></span></h2>
+					<h2 class="home__article-title"><span class="home__article-title-main">Yui-cli 1.0.5 released<span class="home__article-date-position"><span class="home__article-date">2023-02-21 12:24</span></span></span></h2>
 					<div class="home__article-content"><pre><code>pip install yui --upgrade
 </code></pre><h1 id="changelog">CHANGELOG</h1>
 <h2 id="2023-02-20">[2023-02-20]</h2>
@@ -51,6 +51,7 @@
 <ul>
 <li>MacOS and Windows changes for yui open</li>
 <li>error handling for random string instead of taskId</li>
+<li>yui open bug fixed for windows platform</li>
 </ul>
 <div>
 				</article>
