--- a/howto/cli/configure-editor/index.html
+++ b/howto/cli/configure-editor/index.html
@@ -55,6 +55,9 @@
 					<li>
 						<a href="https://yuistaskmanager.github.io/howto/cli/configure-editor/">Configure Editor</a>
 					</li>
+					<li>
+						<a href="https://yuistaskmanager.github.io/howto/cli/archives/">Archives</a>
+					</li>
 				</ul>
 			</nav>
 			<article class="single__article single__article__howto">
@@ -85,6 +88,8 @@ Final command:</p>
 			</article>
 			<div class="howto__buttons">
 				<a href="https://yuistaskmanager.github.io/howto/cli/quick-start/">&lt;&lt; Quick Start</a>
+					|
+				<a href="https://yuistaskmanager.github.io/howto/cli/archives/">Next: Archives >></a>
 			</div>
 		</div>
 	</main>
