--- a/howto/cli/quick-start/index.html
+++ b/howto/cli/quick-start/index.html
@@ -54,6 +54,9 @@
 					<li>
 						<a href="https://yuistaskmanager.github.io/howto/cli/configure-editor/">Configure Editor</a>
 					</li>
+					<li>
+						<a href="https://yuistaskmanager.github.io/howto/cli/archives/">Archives</a>
+					</li>
 				</ul>
 			</nav>
 			<article class="single__article single__article__howto">
